Evenet entity, Bug fixes
