# backend/src/controllers/event/event.routes.js
@@ -1,0 +1,34 @@
+const express = require("express");
+const controller = require('./event.controller');
+
+const router = express.Router();
+
+// read
+router.get('/', (req, res, next) => {
+    return controller.findAll(req, res, next);
+});
+
+router.get('/:id', (req, res, next) => {
+    return controller.findOne(req, res, next);
+});
+
+// create
+router.post('/', (req, res, next) => {
+    return controller.create(req, res, next);
+});
+
+// update
+router.put('/:id', (req, res, next) => {
+    return controller.update(req, res, next);
+});
+
+router.patch('/:id', (req, res, next) => {
+    return controller.update(req, res, next);
+});
+
+// delete
+router.delete('/:id', (req, res, next) => {
+    return controller.delete(req, res, next);
+});
+
+module.exports = router;
